First wave of port-fixing